[project]
name = "hierarchy_link"
authors = [
    { name = "M7md5eir", email = "m7md5eir@gmail.com" },
]
description = "Adds a hierarchical (tree) picker for Link fields in Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "hierarchy_link"
